kust/cluster/chaska-storage/prometheus/resources/ingress-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-realm: Authorization Required - ok
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-type: basic
  name: alertmanager
  namespace: monitoring
spec:
  rules:
    - host: alertmanager.fcaus-f-storage.autodata.tech
      http:
        paths:
          - backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - alertmanager.fcaus-f-storage.autodata.tech
      secretName: fcaus-wildcard
